Image in background

--- a/index.html
+++ b/index.html
@@ -157,6 +157,11 @@
         <!-- Enlarged Image -->
         <img src="" alt="" id="enlarged">
     </div>
+
+    <!-- Main background image -->
+    <div id="main_bg_img">
+
+    </div>
     
     <!-- Main -->
     <main id="main">
