F key in the image viewer enters fullscreen

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
 
         <div id="viewer_tooltip">
-            Use the scroll wheel or arrow keys to navigate
+            Use the scroll wheel or arrow keys to navigate. Press F to enter fullscreen.
         </div>
 
         <div id="viewer_info">
