World items in list are now keyboard focusable

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </div>
         <div id="content">
             <!-- Back Button -->
-            <div id="content_back" title="Back (Esc)" onclick="closeContent()">
+            <div id="content_back" title="Back (Esc)" onclick="closeContent()" tabindex="0">
                 <img src="images/arrow.png" alt="Back Button" id="back_arrow" class="rotate90">Back
             </div>
 
@@ -63,7 +63,7 @@
                 <!-- World download -->
                 <div class="buttons_container flex">
                     <!-- Copy link button -->
-                    <div id="copy_link" class="button_styling" onclick="copyLink()">
+                    <div id="copy_link" class="button_styling" onclick="copyLink()" tabindex=0>
                         <img src="images/link.png" alt="Copy Link">
                     </div>
 
