--- a/index.html
+++ b/index.html
@@ -247,6 +247,7 @@
                 <select name="list_order" id="list_order">
                     <option value="Relevant">Relevant</option>
                     <option value="Chronological">Chronological</option>
+                    <option value="Screen_Count">Number of screenshots</option>
                     <option value="Videos">Show all videos</option>
                     <!-- <option value="Screens">Show all screenshots</option> -->
                 </select>
