--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                 <br><br>
                 <div class="social_container flex">
                     <a href="https://www.notkal.com/" title="https://www.notkal.com/">
-                        <img src="./images/pineapple.png" alt="https://www.notkal.com/" class="social_img">
+                        <img src="./images/icon.png" alt="https://www.notkal.com/" class="social_img" style="margin-right: 6px;">
                     </a>
                     <a href="https://github.com/not-the" title="Github">
                         <img src="./images/github.png" alt="Github" class="social_img">
