--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div id="main_list">
                 <!-- <h2 style="text-align: center; margin-top: 40px;">⚠️ Something went wrong</h2>-->
 
-                <h2 class="list_separator">Active</h2><div id="ATM7" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/ATM7/undefined')">
+                <h2 class="list_separator">Active</h2><div id="ATM7" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/ATM7/2022-12-10_14.38.00.png')">
                     <!-- Click Detection -->
                     <div class="open_area" onclick="openContent(16)" onmouseover="bigBackgroundSrc(16)" tabindex="0"></div>
                 
