--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
                         Finna SMP
                     </h2>
                     <p class="mini_info">6-18-2021 to Present</p>
-                </div><div id="Creative_Realm" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/Creative Realm/undefined')">
+                </div><div id="Creative_Realm" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/Creative Realm/2023-09-24_17.38.42.png')">
                     <!-- Click Detection -->
                     <div class="open_area" onclick="openContent(15)" onmouseover="bigBackgroundSrc(15)" tabindex="0"></div>
                 
@@ -379,7 +379,7 @@
                     <h2 class="title">
                         Creative Realm
                     </h2>
-                    <p class="mini_info">N/A to N/A</p>
+                    <p class="mini_info">N/A to Present</p>
                 </div><h2 class="list_separator">All</h2><div id="BBHP" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/BBHP/2023-04-03_22.01.50.png')">
                     <!-- Click Detection -->
                     <div class="open_area" onclick="openContent(17)" onmouseover="bigBackgroundSrc(17)" tabindex="0"></div>
@@ -645,7 +645,7 @@
             </div>
             
         </div>
-        <p class="secondary_text weight100 center italic">Last updated 7/26/2023</p>
+        <p class="secondary_text weight100 center italic">Last updated 9/24/2023</p>
     </footer>
 
 
