--- a/index.html
+++ b/index.html
@@ -274,9 +274,7 @@
 
     <!-- Main background image -->
     <div class="bg_img_container">
-        <div id="main_bg_img">
-
-        </div>
+        <div id="main_bg_img"></div>
     </div>
 
     <!-- View BG image -->
@@ -352,6 +350,21 @@
             </noscript>
 
             <div id="main_list"><h2 class="list_separator">Active</h2>
+                <div id="GregTech:_New_Horizons" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/GregTech New Horizons/2023-12-15_20.56.05.png')">
+                    <!-- Click Detection -->
+                    <div class="open_area" onclick="openContent(18)" onmouseover="bigBackgroundSrc(18)" tabindex="0"></div>
+                
+                    <!-- Download -->
+                    <a class="download_button list_dl disabled" id="download18" target="_blank" rel="noopener noreferrer">
+                        No Download
+                    </a>
+                
+                    <!-- Title -->
+                    <h2 class="title">
+                        GregTech: New Horizons
+                    </h2>
+                    <p class="mini_info">December 14, 2023 to Present</p>
+                </div>
                 <div id="Finna_SMP" class="world_item" style="background: linear-gradient(90deg, rgb(39, 39, 39) 20%, transparent 100%), url('images/Finna SMP/2021-07-12_19.18.25.png')">
                     <!-- Click Detection -->
                     <div class="open_area" onclick="openContent(2)" onmouseover="bigBackgroundSrc(2)" tabindex="0"></div>
