--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Worlds</title>
+    <title>Minecraft Worlds</title>
 
     <!-- SEO -->
     <meta name="robots" content="none, noindex, nofollow, noarchive, noimageindex">
